<resources>
    <string name="rapicoop">Bienvenido a Rapicoop</string>
    <string name="no_tiene_cuenta"><u>No tiene cuenta?, registrese.</u></string>
    <string name="app_name">RapicoopProject</string>
    <string name="full_name_hint">nombre completo</string>
    <string name="register_email_hint">e-mail</string>
    <string name="phone_hint">celular</string>
    <string name="address_hint">direccion de residencia</string>
    <string-array name="user_types">
        <item name="default">Tipo de usuario</item>
        <item name="deliver">Repartidor</item>
        <item name="vendor">Vendedor</item>
        <item name="client">Cliente</item>
    </string-array>
    <string name="birthdate_hint">fecha de nacimiento</string>
    <string name="register_password_hint">contraseña</string>
    <string name="type_label">Tipo de usuario</string>
    <string name="gender_label">Genero</string>
    <string name="register_btn">registrarse</string>
    <string name="cancel_btn">cancelar</string>
    <string name="search_hint"><i>¿Qué pedirás hoy?</i></string>
    <string name="menu_icons_size">55dp</string>
    <string name="cree_un_restaurante"><u>Cree uno</u></string>
    <string name="title_activity_crear_restaurante">CrearRestauranteActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="a_ade_un_plato_a_tu_oferta_gastron_mica">Añade un plato a tu oferta gastronómica</string>
    <string name="nombre_del_plato">Nombre del plato</string>
    <string name="precio">Precio</string>
    <string name="descripcion">Descripcion</string>
    <string name="categoria_de_comida">Categoria de comida</string>
    <string name="agregar_plato">Agregar plato</string>
</resources>