<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddMenuDishActivity">

    <TextView
        android:id="@+id/tv_add_menu_dish_title"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/a_ade_un_plato_a_tu_oferta_gastron_mica"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="50sp"
        android:layout_height="50sp"
        android:layout_marginStart="16dp"
        app:layout_constraintStart_toEndOf="@+id/tv_add_menu_dish_title"
        app:layout_constraintTop_toTopOf="@+id/tv_add_menu_dish_title"
        app:srcCompat="@drawable/add_menu_icon" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_nombre_plato"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_add_menu_dish_title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etxt_nombre_plato_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_del_plato" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_descripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_nombre_plato">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etxt_descripcion_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descripcion" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_precio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_descripcion">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etxt_precio_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/precio" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_food_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_precio">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etxt_food_category_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/categoria_de_comida" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btn_add_menu_dish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/agregar_plato"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ti_food_category" />


</androidx.constraintlayout.widget.ConstraintLayout>