<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="351dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@color/purple_200"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="123dp"
            android:layout_height="116dp"
            android:layout_marginTop="44dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:src="@drawable/add_user" />

        <EditText
            android:id="@+id/fullname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:hint="@string/full_name_hint"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:ems="10"
            android:hint="@string/register_email_hint"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@+id/fullname"
            app:layout_constraintStart_toStartOf="@+id/fullname"
            app:layout_constraintTop_toBottomOf="@+id/fullname" />

        <EditText
            android:id="@+id/phone_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:ems="10"
            android:inputType="phone"
            android:hint="@string/phone_hint"
            app:layout_constraintEnd_toEndOf="@+id/email"
            app:layout_constraintStart_toStartOf="@+id/email"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:ems="10"
            android:inputType="textPassword|textNoSuggestions"
            android:hint="@string/register_password_hint"
            app:layout_constraintEnd_toEndOf="@+id/phone_number"
            app:layout_constraintStart_toStartOf="@+id/phone_number"
            app:layout_constraintTop_toBottomOf="@+id/phone_number" />

        <RadioGroup
            android:id="@+id/type"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="36dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/cancel_btn"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toBottomOf="@+id/password">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:hint="@string/type_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/type" />

            <RadioButton
                android:id="@+id/client_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:buttonTint="@color/purple_700"
                android:text="Cliente" />

            <RadioButton
                android:id="@+id/vendor_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:buttonTint="@color/purple_700"
                android:text="Vendedor" />
        </RadioGroup>


        <RadioGroup
            android:id="@+id/genders"
            android:layout_width="0dp"
            android:layout_height="30dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="36dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/cancel_btn"
            app:layout_constraintEnd_toEndOf="@+id/type"
            app:layout_constraintStart_toStartOf="@+id/type"
            app:layout_constraintTop_toBottomOf="@+id/type">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:hint="@string/gender_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/type" />

            <RadioButton
                android:id="@+id/male_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:buttonTint="@color/purple_700"
                android:text="Hombre" />

            <RadioButton
                android:id="@+id/female_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:buttonTint="@color/purple_700"
                android:text="Mujer" />

            <RadioButton
                android:id="@+id/other_radioButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textColor="@color/white"
                android:buttonTint="@color/purple_700"
                android:text="Otro" />
        </RadioGroup>

        <Button
            android:id="@+id/register_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="92dp"
            android:layout_marginBottom="24dp"
            android:backgroundTint="@color/purple_700"
            android:text="@string/register_btn"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/genders"
            app:layout_constraintTop_toBottomOf="@+id/type" />

        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple_700"
            android:textColor="@color/white"
            android:onClick="onClickGoBack"
            android:layout_marginTop="92dp"
            android:text="@string/cancel_btn"
            app:layout_constraintStart_toStartOf="@+id/genders"
            app:layout_constraintTop_toBottomOf="@+id/type" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>